final dash design

--- a/src/styles/pages/components-dash/components/_progressStatusBar.scss
+++ b/src/styles/pages/components-dash/components/_progressStatusBar.scss
@@ -1,9 +1,16 @@
 .blackboard__progressStatusBar {
     display:none;
 }//blackboard__progressStatusBar is block to tablet
-.color {
+.color-brown {
     color:rgba(159, 147, 118, 1) !important;
     font-weight: bolder;
+}
+.background-pink {
+    background-color: rgb(243, 206, 202);
+
+}
+.defaultBackground {
+    background-color: rgb(213, 228, 228);
 }
 @media screen and (min-width:767px) {
     .blackboard__progressStatusBar {
@@ -21,11 +28,11 @@
                 font-size:1.9rem;
                 display: block;
             }
-            > div {
+            .btnProgressStatusBar {
                 height: 25px;
                 border-radius: 8px;
                 border: 1px solid #d0d0d3;
-                background-color: rgb(213, 228, 228);
+                // background-color: rgb(213, 228, 228);
             }
         }
         div:nth-child(4) {
