--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -51,7 +51,7 @@ $width__share:100%;
             div {
                 color:rgb(223, 182, 106);
                 margin-top: 20px;
-                font-size: 1.2vw;
+                font-size: 16px;
             }
             button {
                 width: 55%;
