--- a/src/styles/pages/components-dash/components/_menu.scss
+++ b/src/styles/pages/components-dash/components/_menu.scss
@@ -1,5 +1,6 @@
 @import './menu-modal/modals';
-
+$menu-background: rgba(35, 31, 32, 1);
+$menuNav-background:rgba(221, 226, 255, 0.233);
 .text-style {
     font-family: 'Mulish', sans-serif;
     font-size: 1.6rem;
@@ -7,14 +8,19 @@
     letter-spacing: 0.2px;
     color: #DDE2FF;
 }
-
+.btnNavActive {
+    background-color: $menuNav-background;
+}
+.isDefaultActive {
+    background-color: $menuNav-background;
+}
 .menu {
     position: fixed;
     z-index: 100;
     height: 109px;
     width: 100%;
     bottom: 0;
-    background-color: rgba(35, 31, 32, 1);
+    background-color: $menu-background;
         .menu__container {
         display: flex;
         flex-direction: column-reverse;
@@ -59,9 +65,8 @@
                     }
                     .li1__miPropiedad {
                         width: 33%;
-                        font-size: 1.3rem;// cambiar en menu vertical
+                        font-size: 1.3rem;// en menu vertical cambia a 1.6rem
                         align-items: center;
-                        background-color: rgba(221, 226, 255, 0.205);
                         a{
                             display: block;
                         }
@@ -113,14 +118,12 @@
                         width: 100%;
                         height: 270px;
                         margin-bottom: 85px;
-                            li:nth-child(1){
+                            .li1__miPropiedad{
                                 width: 100%;
-                                display: flex;
-                                align-items: center;
-                                background: rgba(221, 226, 255, 0.205);
-                            }
-                            li:hover {
-                                background: rgba(221, 226, 255, 0.205);
+                                font-size: 1.6rem;
+                                img {
+                                    margin-right: 6%;
+                                }
                             }
                             li {
                                 width: inherit;
@@ -129,9 +132,6 @@
                                 align-items: center;
                                 padding-left: 35px;
                                     img {
-                                        margin-right: 6%;
-                                    }
-                                    .nav__li1 img {
                                         margin-right: 6%;
                                     }
                                     a {
