--- a/src/styles/pages/components-dash/components/_userInfo.scss
+++ b/src/styles/pages/components-dash/components/_userInfo.scss
@@ -47,8 +47,10 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                img{
+                i{
                     width: 23%;
+                    font-size: 20px;
+                    cursor: pointer;
                     }
                 }
         }
