--- a/src/styles/pages/components-dash/components/menu-modal/_modals.scss
+++ b/src/styles/pages/components-dash/components/menu-modal/_modals.scss
@@ -93,9 +93,13 @@ $modal-tittle: 2rem;
     }
     :nth-child(4){
         display: flex;
-        align-items: end;
-        height: 30%;
-
+        justify-content: space-around;
+        width: 150px;
+        margin: 6px;
+        font-size: 22px;
+        i{
+            cursor: pointer;
+        }
     }
 
 }
